# slopat

./: .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  test_pipeline.py
docs/: 2025_10_30_DISTRIBUTED_SLOP_FEDERATED_KNOWLEDGE.md  2025_10_30_GETTING_STARTED.md  2025_10_30_PRIVACY_PRESERVING_ARCHITECTURE.md  2025_10_30_SLOPAT_V0_ARCHITECTURE.md  2025_10_30_V0_STATUS_REPORT.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/[hash]/: +page.svelte
slopat/: __init__.py  main.py
slopat/graph/: __init__.py  store.py
slopat/parsers/: __init__.py  gliner_extractor.py  ontology_mapper.py  text_parser.py
slopat/server/: __init__.py  app.py  mcp_server.py
slopat/web/: __init__.py  html_generator.py  html_generator_4col.py  html_generator_old.py  index_generator.py
