[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopat"
version = "0.1.0"
description = "Semantic document analysis with beautiful HTML generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rob", email = "rob@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    # Core NLP and semantic processing
    "gliner>=0.2.0",
    "pyoxigraph>=0.3.0",

    # Web server
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",

    # Web and HTML generation
    "jinja2>=3.0.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.11.0",

    # CLI and utilities
    "click>=8.0.0",
    "rich>=13.0.0",

    # Data processing
    "numpy>=1.21.0",
    "scipy>=1.7.0",

    # MCP server
    "mcp>=0.9.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Optional AI/ML extensions
ai = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.21.0",
]

# Web interface (future)
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.25.0",
]

# All optional dependencies
all = [
    "slopat[dev,ai,web]",
]

[project.urls]
Homepage = "https://github.com/yourusername/slopat"
Repository = "https://github.com/yourusername/slopat"
Documentation = "https://github.com/yourusername/slopat#readme"
"Bug Tracker" = "https://github.com/yourusername/slopat/issues"

[project.scripts]
slopat = "slopat.main:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["slopat"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "gliner.*",
    "pyoxigraph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.coverage.run]
source = ["slopat"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
